# nanolayer

./: .cirun.yml  .pylintrc  README.md  pyoxidizer.bzl  pyproject.toml  requirements-dev.txt  requirements-generate.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: python-publish.yaml  release-binaries-on-ec2-all.yaml  release-binaries-on-ec2.yaml  release-binaries.yaml  release-publish-arm64.yaml  release-publish-for-arch.yaml  release-publish-x86_64.yaml  release-publish.yaml  release_and_publish.yaml  run-generation-tests.yaml  run-tests.yaml
dcontainer/: __main__.py  settings.py
dcontainer/apt/: apt_installer.py
dcontainer/apt_get/: apt_get_installer.py
dcontainer/aptitude/: aptitude_installer.py
dcontainer/cli/: feature.py  generate.py  install.py
dcontainer/devcontainer/: oci_feature.py  oci_feature_installer.py
dcontainer/gh_release/: gh_release_installer.py
dcontainer/models/: devcontainer_feature.py  devcontainer_feature_definition.py
dcontainer/oci/: oci_feature.py  oci_feature_installer.py  oci_registry.py
dcontainer/utils/: invoker.py  linux_information_desk.py  oci_feature.py  oci_feature_installer.py  sudo_invoker.py  version.py
devcontainer_contrib/: __main__.py  settings.py
devcontainer_contrib/cli/: feature.py  features.py
devcontainer_contrib/features/: dependencies_sh.py  feature_sh.py  install_command_sh.py  install_sh.py  test_sh.py
devcontainer_contrib/models/: devcontainer_feature.py  devcontainer_feature_definition.py
devcontainer_contrib/utils/: feature_oci.py  feature_oci_installer.py  oci_feature.py  oci_registry.py  (+1 more)
minilayer/: __main__.py
nanolayer/: __main__.py
pyoxidizer-devcontainer-contrib/: pyoxidizer.bzl
resources/: install-feature.sh
test/: conftest.py  helpers.py
tests/: conftest.py  helpers.py
(+132 files in other folders)
