[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "devcontainer-contrib"
dynamic = ["dependencies", "optional-dependencies", "version"]
readme = "README.md"

[tool.setuptools.packages.find]
include = ["devcontainer_contrib*"]  


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"]}}

[tool.setuptools_scm]
