[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "dcontainer"
dynamic = ["dependencies", "optional-dependencies", "version"]
readme = "README.md"

[tool.setuptools.packages.find]
include = ["dcontainer*"]  

[tool.setuptools.package-data]
dcontainer = ["py.typed"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies={dev = {file = ["requirements-dev.txt"]},generate = {file = ["requirements-generate.txt"]}}


[tool.setuptools_scm]

[project.scripts]
dcontainer = "dcontainer.__main__:main"

